unpackaged/main/default/objects/Account/fields/another_one__c.field-meta.xml
<CustomField>
    <fullName>another_one__c</fullName>
    <defaultValue>false</defaultValue>
    <label>another one</label>
    <type>Checkbox</type>
</CustomField>