unpackaged/main/default/objects/Account/fields/blue__c.field-meta.xml
<CustomField>
    <fullName>blue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>blue?</label>
    <type>Checkbox</type>
</CustomField>