unpackaged/main/default/objects/Account/fields/Onboaring__c.field-meta.xml
<CustomField>
    <fullName>Onboaring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboaring</label>
    <type>Checkbox</type>
</CustomField>